# Outbound_Chan

./: .gitignore  README.md  Sep-Obws-testing.xlsm  chan_gui.spec  main.spec  pyproject.toml  requirements.txt
chan_bot/: pyproject.toml
chan_bot/src/: automation_test.py  excel_interface.py
old/: automation-test_old.py  old_Sep-Obws-testing.xlsm
old/src/: excel_interface.py  main.py  old_excel_interface.py  old_main.py  old_msb_auto_test.py  seaspan_booking.py
src/: .msb_interface.py.swp  automation_test.py  chan_gui.py  excel_interface.py  gui.py  main.py  main.spec  msb_interface.py  msb_manager.py  msb_scanner.py  oauth.py  oauth2.py  oauth3.py  pygui_test.py  requirements.txt  seaspan_booking.py
test/: test
tests/: chan_gui.spec
