[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Outbound_Chan_bot"
version = "0.0.1"
authors = [
    {name = "Catlin Roman", email="catlinroman84@gmail.com"}
]
description = "Automation tool for Diamond Delivery Outbound Support"
readme = "README.md"
requires-python = ">=3.8"
license = "GPLv3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3) ",
]

[project.urls]
Homepage = "https://github.com/catRoman/Outbound_Chan_Bot"
Issues = "https://github.com/catRoman/Outbound_Chan_Bot/issues"